# transcript_extraction_dev

./: .gitignore  LICENSE  README.md  annotate_interview.py  docker-compose.yml  pyproject.toml  transcribe.py  transcribe_v2.py
a_annotated_transcripts/: 10 mar. 11.03​pre_step3_annotated.txt  10 mar. 11.04​ pre_step3_annotated.txt  10 mar. 11.27​ Iker Mateu_step3_annotated.txt  10 mar. 8.18​entrevista pre_step3_annotated.txt  12 jun. 9.15​entrevista alumnos post_step3_annotated.txt  18 feb. 10.21​Andrés _step3_annotated.txt  8 ene. 11.41​entrevista a Paco _step3_annotated.txt  9 jul. 12.55​ Helena Cebrián _step3_annotated.txt
pretrained_models/spkrec-ecapa-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
src/: annotate_interview.py  transcribe.py  transcribe_v2.py
tests/: test_langfuse.py
